[gd_scene load_steps=2 format=3 uid="uid://dlln0n11sq1v8"]

[ext_resource type="Script" path="res://UI/Settings/settings.gd" id="1_bdbn6"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bdbn6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -45.0
offset_right = 54.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ResolutionOptionButton" type="OptionButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 50.0
max_value = 200.0
step = 5.0
value = 100.0
ticks_on_borders = true

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "100% - 1920x1080"

[node name="FullScreenCheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "FullScreen"

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "close"

[connection signal="item_selected" from="HBoxContainer/VBoxContainer/ResolutionOptionButton" to="." method="_on_resolution_option_button_item_selected"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/FullScreenCheckBox" to="." method="_on_full_screen_check_box_toggled"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
